test/types/type_variables/deitz/test_clone_class1a.good
error: 'a' has mixed basic types:( int64 float64 ) 
error: 'a' has mixed basic types:( int64 float64 ) 
error: expression has mixed basic types:( int64 float64 ) 
error: expression has mixed basic types:( int64 float64 ) 
error: expression has mixed basic types:( int64 float64 ) 
error: expression has mixed basic types:( int64 float64 ) 
fail: program does not type
prelude.chpl:321: expression has mixed basic types:( int64 float64 ) 
prelude.chpl:321: expression has mixed basic types:( int64 float64 ) 
prelude.chpl:322: expression has mixed basic types:( int64 float64 ) 
prelude.chpl:322: expression has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:1: class foo:: 'x' has mixed basic types:( null int64 float64 ) 
test_clone_class1a.chpl:2: '_retval' has mixed basic types:( null int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( null int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( null int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( null int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( null int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( null int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( null int64 float64 ) 
test_clone_class1a.chpl:4: expression has mixed basic types:( null int64 float64 ) 
